# drf-service-layer

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
drf_service_layer/: __init__.py  services.py  views.py  viewsets.py
service_layer/: services.py  views.py  viewsets.py
tests/: asgi.py  settings.py  urls.py  wsgi.py
tests/test_app/: models.py  serializers.py  services.py  views.py
tests/test_app/migrations/: 0001_initial.py
tests/test_app/tests/: conftest.py  test_views.py
